[package]
name = "python_package_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[dev-dependencies]
tempfile = "3.2"

[lib]
name = "python_package_manager"
path = "src/lib.rs"